# inpole

./: .gitignore  README.md  container.def  cos_installer.properties  env_setup.sh  environment.yml  inpole_env.def  pyproject.toml  settings.csv  singularity.def
configs/: adni.yaml  copd.yaml  example_config.yaml  ra.yaml  sepsis.yaml
inpole/: __init__.py  metrics.py  pipeline.py  sweep.py  train_predict.py  tree.py  utils.py  visualization.py
inpole/data/: data.py  hparam_registry.py  preprocessing.py  utils.py
inpole/models/: hparam_registry.py  models.py  modules.py  train_predict.py  utils.py
lib/FRLOptimization/: FRL.py  __init__.py  antecedents.py  main.py  softFRL.py
notebooks/: make_adni_data.ipynb  make_copd_data.ipynb  make_ra_data.ipynb  model_example.ipynb  paper_results.ipynb  switch_results.ipynb
scripts/: analyze_results.py  collect_adni.R  collect_results.py  make_datasets.py  make_predictions.py  perform_model_analysis.py  run_experiment.py  train_predict.py
scripts/slurm/: perform_model_analysis.sh  postprocessing_template  run_experiments.sh  training_template
scripts/slurm_templates/: load_modules  postprocessing  preprocessing  training
