[tool.poetry]
name = "inpole"
version = "0.1.0"
description = ""
authors = ["A. Matsson"]
readme = "README.md"
packages = [{include = "inpole"}]

[tool.poetry.dependencies]
python = "3.10.4"
torch = "1.12.1"
conda-lock = "^2.0.0"
ipykernel = "6.13.0"
pandas = "1.4.2"
scikit-learn = "1.1.2"
skorch = "0.13.0"
ipywidgets = "7.6.3"
graphviz = "^0.20.1"
pyyaml = "6.0.0"
gitpython = "^3.1.32"
amhelpers = "0.4.3"
numpy = "1.22.3"
seaborn = "0.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
torchmetrics = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
