[tool.poetry]
name = "inpole"
version = "0.1.0"
description = "Interpretable policy learning."
authors = ["A. Matsson"]
readme = "README.md"
packages = [{include = "inpole"}]

[tool.poetry.dependencies]
python = "3.10.4"
torch = "1.12.1"
conda-lock = "^2.0.0"
ipykernel = "6.13.0"
pandas = "1.5.2"
scikit-learn = "1.2.0"
skorch = "0.13.0"
ipywidgets = "7.6.3"
graphviz = "^0.20.1"
pyyaml = "6.0.0"
gitpython = "^3.1.32"
amhelpers = "0.5.0"
numpy = "1.25.1"
seaborn = "0.12.1"
colorcet = "^3.0.1"
rulefit = {git = "https://github.com/christophM/rulefit.git"}
fasterrisk = "^0.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
torchmetrics = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
